[project]
name = "new-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "thotasinivasmec23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "biopython (>=1.85,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "new_project" } # This tells Poetry to include the 'new_project' directory as a package
]
# --- END ADDITION ---

[tool.poetry.scripts]
get-papers-list = "new_project.cli:main"
